Remove trademark symbols

--- a/src/content/blogs/debugging-and-profiling-on-the-nvidia-gh200-grace-hopper-superchip.mdx
+++ b/src/content/blogs/debugging-and-profiling-on-the-nvidia-gh200-grace-hopper-superchip.mdx
@@ -14,7 +14,7 @@ related: []
 # Introduction
 This blog will guide you through the key functionality of Linaro DDT and Linaro MAP which is part of the Linaro Forge Suite. The Linaro Suite of tools are essential for maximizing performance and reliability when developing on the NVIDIA GH200 Grace Hopper Superchip, making them a valuable addition to any HPC developer’s toolkit.
 
-The NVIDIA® GH200 [Grace Hopper](https://www.nvidia.com/en-gb/data-center/grace-hopper-superchip/) architecture brings together the groundbreaking performance of the NVIDIA Hopper GPU with the versatility of the NVIDIA Grace™ CPU, allowing heterogeneous GPU-CPU compute for AI, Data Analytics, and HPC workloads.
+The NVIDIA GH200 [Grace Hopper](https://www.nvidia.com/en-gb/data-center/grace-hopper-superchip/) architecture brings together the groundbreaking performance of the NVIDIA Hopper GPU with the versatility of the NVIDIA Grace CPU, allowing heterogeneous GPU-CPU compute for AI, Data Analytics, and HPC workloads.
 
 The NVIDIA Grace CPU uses 72 Arm Neoverse V2 CPU cores to deliver leading per-thread performance, while providing higher energy efficiency than traditional CPUs. The NVIDIA Hopper GPU is the ninth-generation NVIDIA data center GPU and is designed to deliver order-of-magnitude improvements for large-scale AI and HPC applications.
 
