--- a/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
+++ b/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Linaro Devoards Power Up Android 15 Right on Launch Day"
-description: Android15 boots on Linaro reference devboards on the day of its release
+title: "Linaro Devboards Power Up Android 15 Right on Launch Day"
+description: Android 15 boots on Linaro reference devboards on the day of its release
 date: 2024-09-06T00:00:00.000Z
 image: /linaro-website/images/blog/image1_z6o8ic.png
 tags:
