--- a/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
+++ b/src/content/blogs/linaro-devboards-power-up-android-15-right-on-launch-day.mdx
@@ -5,6 +5,8 @@ date: 2024-09-06T00:00:00.000Z
 image: /linaro-website/images/blog/image1_z6o8ic.png
 tags:
   - android
+  - qualcomm
+  - hisilicon
 author: amit-pundir
 related: []
 
