Fix contact us link

--- a/src/content/blogs/forge-thread-affinity-advisor.mdx
+++ b/src/content/blogs/forge-thread-affinity-advisor.mdx
@@ -78,7 +78,7 @@ Linaro MAP and Linaro Performance Reports remain simple, easy to use tools, alth
 
 The cohesive integration into MAP ensures that the performance tuning process is an intuitive component of ongoing performance efforts. TAA can be used alongside all the other great features that are part of Linaro Forge, which provides a comprehensive HPC toolsuite that saves time and effort during each stage of an application optimization workflow.
 
-Ready to take your application performance to the next level? [Contact us](/contact) to learn more about how Thread Affinity Advisor can enhance your development process, or don’t miss to catch up with our Linaro Forge team at SC24 in Atlanta from Nov, 17th till 21st! We are at the AWS booth (#2501).
+Ready to take your application performance to the next level? [Contact us](https://www.linaroforge.com/contact) to learn more about how Thread Affinity Advisor can enhance your development process, or don’t miss to catch up with our Linaro Forge team at SC24 in Atlanta from Nov, 17th till 21st! We are at the AWS booth (#2501).
 
 For further reading on TAA please see:
 
