--- a/src/content/blogs/forge-thread-affinity-advisor.mdx
+++ b/src/content/blogs/forge-thread-affinity-advisor.mdx
@@ -10,6 +10,7 @@ author: rudy-shand
 related: []
 
 ---
+import CloudinaryImg from "../../components/cloudinary/CloudinaryImg.astro";
 
 # Are you ready to maximize performance on complex, multi-threaded applications?
 
