--- a/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
+++ b/src/content/news/linaro-unveils-onelab-at-connect-revolutionizing-edge-compute-interoperability-testing.mdx
@@ -10,13 +10,13 @@ author: linaro
 related: []
 ---
 
-*Linaro Unveils ONELab at Linaro Connect, Revolutionizing Edge Compute Interoperability Testing*
+_Linaro Unveils ONELab at Linaro Connect, Revolutionizing Edge Compute Interoperability Testing_
 
 Linaro Connect, Madrid, Spain; [Wednesday 15 May] – Linaro, the leading engineering organization driving innovation in the Arm ecosystem, today announced the launch of ONELab, a groundbreaking initiative aimed at revolutionizing interoperability testing for Edge and IoT devices. The announcement was made during the second day of the Linaro Connect conference, representing a significant milestone in addressing the challenges of cloud-native edge computing.
 
 In today's rapidly evolving digital landscape, the demand for sophisticated edge compute solutions has never been higher. The proliferation of connected devices, coupled with the need for efficient data processing closer to its source, has underscored the importance of interoperability testing in ensuring seamless deployment of cloud-native edge solutions.
 
-ONELab, Linaro's innovative interoperability testing platform, provides a collaborative 
+ONELab, Linaro's innovative interoperability testing platform, provides a collaborative
 environment for Silicon Vendors (SiPs) and Original Design Manufacturers (ODMs) to validate hardware and software compatibility with operating systems and cloud services. The platform streamlines the testing process, significantly reducing time-to-market and minimizing risks associated with compatibility issues.
 
 "We are excited to unveil ONELab at Linaro Connect, the most important conference for the Arm ecosystem," said Grant Likely, CTO at Linaro. "ONELab represents a significant step towards overcoming the challenges of cloud-native edge computing. By fostering collaboration and interoperability testing, we aim to create a more secure, efficient, and scalable ecosystem for Edge and IoT devices."
@@ -29,9 +29,11 @@ The launch of ONELab has already garnered strong support from industry leaders, 
 
 “We are proud to support Linaro’s ONELab initiative to drive greater standardization within the embedded software ecosystem, making it easier for developers to integrate technologies from different projects and vendors,” said Simon George, Director, Embedded Software – Solutions Engineering at AMD.
 
-“We welcome the launch of Linaro`s ONELab,” said Kai Hackbarth, Head of Products and Solutions at Bosch SDS. “As the importance of connected devices is steadily increasing, interoperability testing is crucial to reduce time-to-market for development of cloud native edge solutions and to help overcome a highly fragmented landscape. The birth of ONELab is an important step to further facilitate the adoption of Edge and IoT devices based on seamless collaboration across organizations.” 
+“We welcome the launch of Linaro`s ONELab,” said Kai Hackbarth, Head of Products and Solutions at Bosch SDS. “As the importance of connected devices is steadily increasing, interoperability testing is crucial to reduce time-to-market for development of cloud native edge solutions and to help overcome a highly fragmented landscape. The birth of ONELab is an important step to further facilitate the adoption of Edge and IoT devices based on seamless collaboration across organizations.”
 
 “Qualcomm is thrilled to bring RB2 Edge Compute platform to ONELab towards continuous testing/integration of Open-source OSs/Upstream Kernel and ARM System-Ready-IR test suite”, said Guru Chinnabhandar, Senior Director, Engineering at Qualcomm. “This paves the way for host of other IoT Edge Compute platforms such as RB1, RB3, RB5, RB3Gen2 and RB5Gen2.”
+
+"This innovative collaborative effort is poised to provide scalable interoperability for Arm-based edge and IoT devices, addressing a critical need in the industry," said Mohammed Doger, Vice President of Embedded Processing Business Development Division at Renesas, "Renesas is proud to join ONELab as a lead partner, leveraging our RZ MPUs to support this critical endeavor. Our collaboration underscores our commitment to advancing technology and ensuring seamless integration across diverse platforms. We believe that this initiative will significantly enhance the development and deployment of edge and IoT devices, driving innovation and efficiency in the industry."
 
 “Texas Instruments is excited to be a founding partner of Linaro’s ONELab initiative. ONELab will play a vital role in continuously assessing the compliance of TI platforms with Arm SystemReady IR standards. This will give our customers confidence that our platforms meet, and will continue to meet, Arm’s rigorous standards. As a committed partner of the ONELab Advisory Board, we are dedicated to ensuring that the ONELab service provides true value to our customers.” said Artem Aginskiy, General Manager, Arm-based Processors, Texas Instruments.
 
