convert image to jpg

--- a/src/content/blogs/embedded-world-2025.mdx
+++ b/src/content/blogs/embedded-world-2025.mdx
@@ -3,7 +3,7 @@ title: "ONELab at Embedded World - Linaro’s transformative solution to edge an
 description: >
   At Embedded World 2024, Linaro introduced [ONELab](https://www.linaro.org/solutions/onelab) - a solution which helps Silicon Vendors and Device Makers conduct continuous interoperability tests among different Operating Systems and Cloud Services.
 date: 2025-03-03T00:00:00.000Z
-image: linaro-website/images/blog/ONELab_demo_xm9h7q.heic
+image: linaro-website/images/blog/ONELab_demo_ddv3ah.jpg
 tags:
   - iot-embedded
   - arm
