--- a/src/content/blogs/embedded-world-2025.mdx
+++ b/src/content/blogs/embedded-world-2025.mdx
@@ -16,7 +16,7 @@ At Embedded World 2024, Linaro introduced [ONELab](https://www.linaro.org/soluti
 
 Stop by our booth to see ONELab in action as we connect it up to four partner boards: AMD kv260, Texas Instruments SK-AM62P-LP, Renesas RZ/G2L and Qualcomm RB3v2.
 
-If you want to learn more about ONELab before stopping by our booth, check out our session “Scaling Interoperability Testing with ONELab - Conquering the Challenges of Arm SystemReady Certification” at the Speaker Forum on Wednesday 12 March, 13:30 in the Forum in Hall 3.
+If you want to learn more about ONELab before stopping by our booth, check out our session “_Scaling Interoperability Testing with ONELab - Conquering the Challenges of Arm SystemReady Certification_” at the Speaker Forum on Wednesday 12 March, 13:30 in the Forum in Hall 3.
 
 ## What problems does ONELab address?
 
@@ -30,6 +30,6 @@ ONELab helps address these challenges by providing Silicon Vendors (SiPs) and Or
 
 ## Interested to learn more?
 
-Make sure to stop by our booth 4/501 to learn more about ONELab and the services we provide to help you streamline your IoT and Edge device testing. Alternatively visit our ONELab website or get in touch here.
+Make sure to stop by our booth 4/501 to learn more about ONELab and the services we provide to help you streamline your IoT and Edge device testing. Alternatively visit our (ONELab website)[https://www.linaro.org/solutions/onelab] or (get in touch here)[https://www.linaro.org/contact].
 
 We hope to see you at Embedded World!
