--- a/src/content/blogs/embedded-world-2025.mdx
+++ b/src/content/blogs/embedded-world-2025.mdx
@@ -30,6 +30,6 @@ ONELab helps address these challenges by providing Silicon Vendors (SiPs) and Or
 
 ## Interested to learn more?
 
-Make sure to stop by our booth 4/501 to learn more about ONELab and the services we provide to help you streamline your IoT and Edge device testing. Alternatively visit our (ONELab website)[https://www.linaro.org/solutions/onelab] or (get in touch here)[https://www.linaro.org/contact].
+Make sure to stop by our booth 4/501 to learn more about ONELab and the services we provide to help you streamline your IoT and Edge device testing. Alternatively visit our [ONELab website](https://www.linaro.org/solutions/onelab) or [get in touch here](https://www.linaro.org/contact).
 
 We hope to see you at Embedded World!
