--- a/src/content/blogs/onelab-at-embedded-world.mdx
+++ b/src/content/blogs/onelab-at-embedded-world.mdx
@@ -24,9 +24,9 @@ The number of connected devices continues to grow at an unprecedented rate, as d
 
 ONELab helps address these challenges by providing Silicon Vendors (SiPs) and Original Design Manufacturers (ODMs) with a platform to continuously test interoperability with operating systems and cloud services, ensuring readiness for cloud-native edge deployments. Through ONELab, users can:
 
-\- Streamline the testing and Arm SystemReady-DT (devicetree) and PSA Certified certification process, allowing them to effortlessly verify hardware and software compatibility
-\- Identify issues early by addressing compatibility concerns throughout the development process, avoiding costly setbacks later on.
-\- Provide evidence to their customers that their products are cloud-native edge-ready and will just work.
+- Streamline the testing and Arm SystemReady-DT (devicetree) and PSA Certified certification process, allowing them to effortlessly verify hardware and software compatibility.
+- Identify issues early by addressing compatibility concerns throughout the development process, avoiding costly setbacks later on.
+- Provide evidence to their customers that their products are cloud-native edge-ready and will just work.
 
 ## Interested to learn more?
 
