--- a/src/content/blogs/onelab-at-embedded-world.mdx
+++ b/src/content/blogs/onelab-at-embedded-world.mdx
@@ -1,5 +1,5 @@
 ---
-title: "ONELab at Embedded World - Linaro’s transformative solution to edge and IoT device interoperability testing"
+title: "Linaro to showcase ONELab at Embedded World 2025"
 description: >
   At Embedded World 2024, Linaro introduced [ONELab](https://www.linaro.org/solutions/onelab) - a solution which helps Silicon Vendors and Device Makers conduct continuous interoperability tests among different Operating Systems and Cloud Services.
 date: 2025-03-03T00:00:00.000Z
