--- a/src/content/news/linaro-announces-commercial-launch-of-onelab.mdx
+++ b/src/content/news/linaro-announces-commercial-launch-of-onelab.mdx
@@ -1,7 +1,8 @@
 ---
 title: >
   Linaro Announces Commercial Launch of ONELab: The Journey towards Interoperability of Future IoT & Edge Devices has Never Been Easier
-description: test test test
+description: >
+  Linaro Announces Commercial Launch of ONELab: The Journey towards Interoperability of Future IoT & Edge Devices has Never Been Easier
 date: 2025-03-11 09:00:00 +00:00
 image: linaro-website/images/news/onelab_lmvnrz.png
 tags:
