--- a/src/content/news/linaro-announces-commercial-launch-of-onelab.mdx
+++ b/src/content/news/linaro-announces-commercial-launch-of-onelab.mdx
@@ -2,7 +2,7 @@
 title: >
   Linaro Announces Commercial Launch of ONELab: The Journey towards Interoperability of Future IoT & Edge Devices has Never Been Easier
 description: >
-  Linaro Announces Commercial Launch of ONELab: The Journey towards Interoperability of Future IoT & Edge Devices has Never Been Easier
+  Linaro announced the commercial launch of ONELab at Embedded World today. ONELab is a testing platform for IoT and Edge devices that revolutionizes interoperability testing.
 date: 2025-03-11 09:00:00 +00:00
 image: linaro-website/images/news/onelab_lmvnrz.png
 tags:
