--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -27,11 +27,11 @@ The ONELab platform, recently launched at Embedded World 2025, addresses this ch
 
 By leveraging ONELab, developers and manufacturers can:
 
-Reduce custom engineering efforts in the software supply chain.
-Ensure standard Linux distributions work out of the box on embedded platforms.
-Eliminate the struggle of firmware and OS compatibility.
-Enable regression testing to validate firmware updates.
-Reassure customers that OS updates will function as expected.
+- Reduce custom engineering efforts in the software supply chain.
+- Ensure standard Linux distributions work out of the box on embedded platforms.
+- Eliminate the struggle of firmware and OS compatibility.
+- Enable regression testing to validate firmware updates.
+- Reassure customers that OS updates will function as expected.
 
 Join this webinar to learn how ONELab is revolutionizing embedded device testing and making interoperability at scale a reality.
 
