--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -11,7 +11,10 @@ event_end: 2025-04-07 17:00:00 +00:00
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
 button:
-  text: View
+  text: Register Here
+  url: https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator
+footerButton:
+  text: Register Here
   url: https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator
 ---
 
@@ -34,5 +37,3 @@ By leveraging ONELab, developers and manufacturers can:
 - Reassure customers that OS updates will function as expected.
 
 Join this webinar to learn how ONELab is revolutionizing embedded device testing and making interoperability at scale a reality.
-
-[Register here](https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator)
