--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -11,7 +11,7 @@ event_end: 2025-04-07 17:00:00 +00:00
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
 button:
-  text: Register Here
+  text: View
   url: https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator
 footerButton:
   text: Register Here
