--- a/src/content/events/scaling-interoperability-testing-with-onelab.mdx
+++ b/src/content/events/scaling-interoperability-testing-with-onelab.mdx
@@ -24,6 +24,15 @@ footerButton:
 
 🌐 Online Event: Join from anywhere
 
+<div className="flex justify-center items-center">
+  <a
+    href="https://www.eventbrite.co.uk/e/scaling-interoperability-testing-with-onelab-tickets-1273925117319?aff=oddtdtcreator"
+    className="inline-block"
+  >
+    <button className="linaro-gradient-button mx-auto">Register Here</button>
+  </a>
+</div>
+
 Ensuring interoperability in the embedded ecosystem is a complex challenge. With a wide range of possible OS choices—including SoC vendor OSes, ODM-specific builds, OEM enterprise OSes, and third-party distributions—embedded devices must be continuously tested for compatibility across multiple environments.
 
 The ONELab platform, recently launched at Embedded World 2025, addresses this challenge by providing a continuous compliance testing service for Arm SystemReady-Devicetree (DT). It brings together devices, OS images, test suites, and workloads to ensure that firmware implementations meet the Embedded Base Boot Requirements (EBBR) and the Devicetree Specification while aligning with the SystemReady Compliance System Requirements Specification.
